--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -26,6 +26,7 @@
   width: 100%;
   max-width: 250px;
   margin-top: -10px;
+  margin-left: -20px;
 }
 
 /* --- Search --- */
@@ -91,10 +92,10 @@
 
 .section-line {
   position: absolute;
-  bottom: -5px;
-  width: 60px;
+  bottom: -35%;
+
   transition: left 0.4s ease;
-  width: 25%;
+  width: 18%;
 }
 
 /* --- Log Buttons --- */
@@ -113,12 +114,21 @@
   cursor: pointer;
 }
 
+/*---Whatever small screen without line---*/
+@media(max-width: 1180px) {
+  .section-line {
+    display: none;
+  }
+
+}
+
+
 /* --- Mobile --- */
 @media (max-width: 768px) {
   .header {
     flex-direction: column;
     align-items: center;
-    gap: 15px;
+    gap: 15px;  
   }
 
   .logo-container {
